--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://artemefimovich.github.io/friday-project/",
   "name": "friday-project",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "@types/react-router-dom": "^5.3.1",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.23.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -29,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
