--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.23.0",
     "gh-pages": "^3.2.3",
     "material-icons": "^1.10.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
